assets/less/styles.less
.file-list-wrapper {
  position: relative;
}

.breadcrumb {
  padding: 0;
  margin: 0;
  list-style: none;

  .breadcrumb-item {
    display: inline-block;

    .breadcrumb-item-inner {
      min-width: inherit;
      margin: 0;
      vertical-align: middle;
    }
  }

  .breadcrumb-item+.breadcrumb-item:before {
    content: "";
    display: inline-block;
  }

  .breadcrumb-separator {
    height: 12px;
  }
}

.context-menu {
  background-color: white;
  position: fixed;
  z-index: 30;
}

.dropdown-menu-item {
  overflow: hidden;
  margin: 0;
  display: block;
  text-align: left;
  padding: 5px 15px;

  .name {
    padding-left: 3px;
  }
}

.file-word-bg {
  background-color: #4285f4 !important;
}

.file-spreadsheet-bg {
  background-color: #0f9d58 !important;
}

.file-presentation-bg {
  background-color: #f4b400 !important;
}

.file-bg {
  background-color: lighten(black, 50%) !important;
}

.md-inline-list-icon-label {
  color: buttontext;
  padding-left: 20px;
  display: inline-block;
  vertical-align: middle;
}

.selected {
  background: @text-primary !important;
  color: white !important;
}

.fab-container {
  position: absolute;
  right: 24px;
  bottom: 14px;
}

.prevent-backdrop {
  .md-sidenav-backdrop {
    display: none;
  }
}

.wrapper {
  position: relative;
  &.grid {
    display: block;
  }
}

.drive-list {
  padding: 0;
  overflow: auto;
  overflow-x: hidden;

  .drive-list-item {
    .icon {
      vertical-align: middle;
      padding-right: 10px;
    }

    .md-button {
      border-radius: 0;
      text-align: left;
      overflow: hidden;
      text-transform: none;
      background: transparent;

      &:not([disabled]):hover {
        background: rgba(158,158,158,0.2)
      }
    }
  }
}

.gate {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

.btn-gate {
  width: 150px !important;
  height: 150px !important;
}

.file-navigation-dialog {
  .header {
    background-color: @text-primary;
    margin: 0;
    padding: 10px;
  }

  .disabled {
    opacity: 0.25;
  }

  .current-folder {
    box-shadow: 0px 2px 4px 0 rgba(0, 0, 0, 0.16);
  }

  .md-dialog.md-default-theme.md-content-overflow .md-actions {
    border-top-color: rgba(0,0,0,0.12);
  }
}

.clickable {
  cursor: pointer;
}

.text-overflow {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.face {
  border-radius: 30px;
  border: 3px solid #ddd;
  width: 52px;
  margin: 16px;
}

.sidenav-menu-list-container {
  .list-item {
    .list-item-inner {
      display: block;
      text-align: left;
      line-height: 64px;
      margin: 0;
      padding-left: 40px;
    }
  }
}

.new-menu-list {
  .new-menu-list-item .new-menu-list-item-inner {
    width: auto;

    .icon {
      margin-top: 5px;
      width: 100%;
    }

    .name {
      width: auto;
    }
  }
}

.sidenav-content {
  overflow: auto;
  flex-direction: column;
  display: flex;
}

.details-thumbnail {
  width: 320px;
  height: 200px;
  justify-content: center;
  align-items: center;
  display: flex;
  margin: 15px 0 1px 0;
}

.details-thumbnail-image {
  display: block;
  margin: auto;
  max-height: 200px;
  max-width: 320px;
  border: 1px solid #e1e1e1;
}

.details-informations {
  margin: 0 15px;
  > [layout="row"] {
    margin-bottom: 5px;
  }
}

.search-form-wrapper {
  position: relative;

  .btn-close-search-form {
    position: absolute;
    top: 0;
    margin: 0;
  }
}

.md-grid-tile-footer-darker {
  background: rgba(0, 0, 0, 0.5);
}

// Rules for sizing the icon.
.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }

// Rules for using icons as black on a light background.
.material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }

// Rules for using icons as white on a dark background.
.material-icons.md-light { color: rgba(255, 255, 255, 1); }
.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }

@-moz-document url-prefix() {
  [layout-fill] {
    margin: 0;
    width: 100%;
    min-height: 100%;
    height: inherit;
  }
}

